# keystone

./: .dockerignore  .env  .gitignore  .gitlab-ci.yml  .gitmodules  .pylintrc  .semgrepignore  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  sample.env
config/: __init__.py  asgi.py  jinja2env.py  settings.py  urls.py  wsgi.py
dev/: docker-compose.yml  entrypoint.py  entrypoint.sh  example_calls.http
dev/app/: entrypoint.prod.sh
dev/db/: .env.prod.db
dev/nginx/: nginx.conf
docs/: 20230614-shopping-for-collections.md  arch_access_control_config.md
keystone/: admin.py  ait.py  ait_user.py  api.py  apps.py  arch_api.py  context_processors.py  forms.py  hashers.py  helpers.py  jobmail.py  middleware.py  models.py  plugins.py  solr.py  validators.py  views.py
keystone/db_functions/: README.md  collection_on_insert.sql  user_on_update.sql
keystone/db_triggers/: README.md  trig_collection_insert.sql  trig_collection_update.sql  trig_user_update.sql
keystone/migrations/: 0001_initial.py  0002_become_arch_client.py  0003_alter_collection_collection_type.py  0004_jobtype_parameters_schema.py  0005_alter_user_username.py  0006_alter_collection_metadata.py  0007_alter_user_username.py  0008_remove_collection_latest_dataset_dataset_teams.py  0009_jobtype_code_url_jobtype_info_url.py  0010_team_team_unique.py  0011_user_insert_update_triggers.py  0012_alter_account_max_users.py  0013_alter_jobfile_line_count.py  0014_user_update_trigger_allow_account_mutation.py  0015_collection_metadata__input_spec_idx.py  0016_collection_metadata__input_spec_unique_triggers.py  (+1 more)
keystone/static/: manifest.json
tests/: views_tests.py
web-components/: .eslintignore  .eslintrc-ts.js  .prettierignore  Makefile  package-lock.json  package.json  rollup.config.js  tsconfig.json
(+352 files in other folders)
