[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "config",
    "keystone",
]

[project]
name = "keystone"
version = "2.2.0"
description = "ARCH Web Client"
dependencies = [
    "django",
    "django-ninja",
    "django-resized",
    "gunicorn",
    "jinja2",
    "pillow",
    "psycopg[c]",
    "python-dotenv",
    "requests",
    "uuid6",
    "requests",
    "sentry-sdk",
]

[project.optional-dependencies]
dev = [
    "black",
    "model_bakery",
    "pylint",
    "pylint-django",
    "pylint-gitlab",
    "pytest",
    "pytest-cov",
    "pytest-django",
    "tox",
]

[project.scripts]
"manage.py" = "config:django_manage"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
testpaths = [
    "tests",
    "integration",
]
python_files = [
    "tests.py",
    "test_*.py",
    "*_tests.py",
]

[tool.black]
target-version = ["py310"]
